istio-service-mesh/istio/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: ingress
  servers:
  - port: 
      number: 80
      name: http 
      protocol: HTTP 
    hosts: 
      - "0.0.0.0"
