istio-service-mesh/istio/egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata: 
  name: wordtimeapi
spec:
  hosts:
  - wordtimeapi.org
  ports:
  - number: 80
    name: http 
    protocol: HTTP 
  - number: 443 
    name: https
    protocol: HTTPS
  resolution: DNS 
  location: MESH_EXTERNAL
