istio-service-mesh/istio/routing-1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - "*" 
  gateways:
  - my-gateway
  http:
  - route:
    - destination:
        host: frontend
        subset: prod   
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: middleware
spec:
  hosts:
  - middleware 
  http:
  - route:
    - destination:
        host: middleware
        subset: prod  
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
spec:
  hosts:
  - backend 
  http:
  - route:
    - destination:
        host: backend
        subset: prod
